<resources>
    <string name="app_name">DrunkMel</string>

    <!--Shared preference file-->
    <string name="preference_file_players_list">com.drunkmel.drunkmel.PLAYERS_TABLE</string>
    <string name="preference_file_players_score">com.drunkmel.drunkmel.PLAYERS_SCORE</string>
    <string name="preference_file_players_turns">com.drunkmel.drunkmel.PLAYER_TURN</string>

    <!--Home Activity-->
    <string name="penaltyButton">CASTIGOS</string>
    <string name="challengeButton">DESAFÍOS</string>
    <string name="questionButton">PREGUNTAS</string>
    <string name="homeTitle">¡Selecciona tipo de juego!</string>

    <!--Player Activity-->
    <string name="playersLabel">Agrega jugadores!</string>
    <string name="addPlayer">NUEVO JUGADOR</string>
    <string name="next">SIGUIENTE</string>
    <string name="newPlayerHint">Nuevo jugador</string>

    <!--Challenge Activity-->
    <string name="pass">CUMPLIÓ</string>
    <string name="fail">NO CUMPLIÓ</string>

    <!--Penalty Activity-->
    <string name="nextTurn">SIGUIENTE</string>
    <string name="end">FINALIZAR</string>

    <!--Challenge holder-->
    <string name="punishmentBoldInCarousel">Castigo: </string>

    <!--Question Activity -->
    <string name="turnOf">Turno de: </string>

    <!--QuestionAnswer Activity -->
    <string name="questionAnswerContinueButton">Continuar</string>
    <string name="questionAnswerFinalizeButton">Finalizar</string>
    <string name="questionAnswerTittle">Te salvaste, pasa el celular al siguiente jugador y cuando este listo presione continuar para responerder la siguiente pregunta</string>

    <!--Score Activity-->
    <string name="scoreTittle">Tabla de posiciones</string>
    <string name="playerHistoryButton">Mostrar Historial</string>
    <string name="gotoHome">Volver al Inicio</string>
    <string name="playerHistoryTittle">Historial de Partidas</string>

</resources>
