<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/questionButton"
        android:text="@string/questionButton"
        android:layout_alignParentBottom="true"
        style="@style/HomeButton"/>

    <Button
        android:id="@+id/challengeButton"
        android:text="@string/challengeButton"
        android:layout_above="@id/questionButton"
        style="@style/HomeButton"/>

    <TextView
        android:id="@+id/homeTitle"
        android:text="@string/homeTitle"
        android:textSize="@dimen/activity_tittle"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/challengeButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"/>

</RelativeLayout>
