<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_challenge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.drunkmel.drunkmel.ChallengeActivity">

    <TextView
        android:id="@+id/challengeTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#80ffffff"
        android:textSize="30dp"
        android:padding="5dp"
        android:textColor="#000"
        android:textStyle="bold"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/carousel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/challengeTittle"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:layout_marginBottom="32dp">

        <!--We add challenges here programmatically-->

    </android.support.v7.widget.RecyclerView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/carousel"
        android:orientation="vertical"
        android:id="@+id/selectionButtons"
        android:gravity="center">
        <Button
            android:text="@string/pass"
            android:id="@+id/pass"
            android:visibility="gone"
            style="@style/HomeButton"/>

        <Button
            android:text="@string/fail"
            android:id="@+id/fail"
            android:visibility="gone"
            style="@style/HomeButton"/>
        <Button
            android:text="@string/end"
            android:id="@+id/endChallenge"
            android:visibility="gone"
            style="@style/HomeButton"/>

    </LinearLayout>

</RelativeLayout>
